--- a/_profiles/default.html
+++ b/_profiles/default.html
@@ -3,7 +3,7 @@
 # The human-friendly name of the profile. Whenever you're asked for the profile
 # ID, it refers to the name of the profile file — in this case, "default".
 #
-name: "IdealHost.ro"
+name: "Index"
 
 #
 # The default profile will be the one shown when accessing the root URL of your
@@ -26,7 +26,7 @@ interval: 12
 #
 parameters:
   connectivity: "Cable"
-  location: "Dulles:Chrome"
+  location: "Prague:Chrome"
   runs: 1
   url: "http://www.idealhost.ro"
 
